--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,8 +9,11 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest]
-        ver: [0.15.0, 0.25.0, 0.29.0]
+        ver: [1.3.5, 1.20.0, 1.28.0]
     steps:
+      - uses: actions/setup-go@v3
+        with:
+          go-version: '1.18'
       - name: asdf_plugin_test
         uses: asdf-vm/actions/plugin-test@v1
         with:
