--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest]
+        os: [ubuntu-latest]
         ver: [1.3.5, 1.20.0, 1.28.0]
     steps:
       - uses: actions/setup-go@v3
@@ -18,6 +18,6 @@ jobs:
         uses: asdf-vm/actions/plugin-test@v1
         with:
           version: ${{ matrix.ver }}
-          command: swagger version
+          command: file protoc-gen-go
         env:
           GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
